Settings is ready, Music has error

--- a/app/src/main/res/layout/files.xml
+++ b/app/src/main/res/layout/files.xml
@@ -19,13 +19,22 @@
     <TextView
         android:id="@+id/fileName"
         android:layout_width="0dp"
-        android:layout_height="50dp"
+        android:layout_height="0dp"
         android:layout_toRightOf="@+id/fileOrDirectory"
         android:text="TextView"
+        app:layout_constraintBottom_toTopOf="@+id/nums"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/fileOrDirectory"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/nums"
+        android:layout_width="0dp"
+        android:layout_height="15dp"
+        android:textSize="8sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/fileOrDirectory"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/fileName" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
