Music is ready. Playlist is started.

--- a/app/src/main/res/layout/files.xml
+++ b/app/src/main/res/layout/files.xml
@@ -22,6 +22,7 @@
         android:layout_height="0dp"
         android:layout_toRightOf="@+id/fileOrDirectory"
         android:text="TextView"
+        android:textColor="#FF5722"
         app:layout_constraintBottom_toTopOf="@+id/nums"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/fileOrDirectory"
@@ -31,6 +32,7 @@
         android:id="@+id/nums"
         android:layout_width="0dp"
         android:layout_height="15dp"
+        android:textColor="#FF5722"
         android:textSize="8sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
