--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -4,34 +4,28 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:background="#673AB7"
+    android:orientation="vertical">
 
     <Button
         android:id="@+id/settings"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/settings"
-        app:layout_constraintEnd_toStartOf="@+id/papki"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/music"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/fl" />
 
     <Button
         android:id="@+id/music"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/isPlaying"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/papki"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/papki"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="@string/catalog"
-        app:layout_constraintEnd_toStartOf="@+id/music"
         app:layout_constraintStart_toEndOf="@+id/settings"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/fl" />
 
     <FrameLayout
         android:id="@+id/fl"
@@ -40,7 +34,7 @@
         app:layout_constraintBottom_toTopOf="@+id/apply"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/settings">
+        app:layout_constraintTop_toBottomOf="@+id/textView2">
 
     </FrameLayout>
 
@@ -50,9 +44,20 @@
         android:layout_height="wrap_content"
         android:text="@string/apply"
         android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/settings"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/fl" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@+id/fl"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
