--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -1,43 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="#673AB7"
+    android:orientation="vertical">
 
     <Switch
         android:id="@+id/switch2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/isRandom"
+        android:textColor="#FF5722"
         android:textSize="18sp" />
 
     <RadioGroup
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
+        android:layout_height="match_parent">
 
         <TextView
             android:id="@+id/textView"
             android:layout_width="match_parent"
             android:layout_height="30dp"
             android:text="@string/isLooping"
-            android:textColor="@android:color/black"
+            android:textColor="#FF5722"
             android:textSize="18sp" />
 
         <RadioButton
             android:id="@+id/loop0"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/loop0" />
+            android:text="@string/loop0"
+            android:textColor="#FF5722" />
 
         <RadioButton
             android:id="@+id/loop1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/loop1" />
+            android:text="@string/loop1"
+            android:textColor="#FF5722" />
 
         <RadioButton
             android:id="@+id/loop2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/loop2" />
+            android:text="@string/loop2"
+            android:textColor="#FF5722" />
     </RadioGroup>
 </LinearLayout>
