--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,32 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
+    <color name="beige">#F5F5DC</color>
+    <color name="emerald">#50C878</color>
+    <color name="gray">#808080</color>
+    <color name="pink">#FFC0CB</color>
+    <color name="olive">#808000</color>
+    <color name="greenLime">#32CD32</color>
+    <color name="red">#FF0000</color>
+    <color name="yellow">#FFFF00</color>
+    <color name="cherryRed">#911E42</color>
+    <color name="lightOrange">#FFA000</color>
+    <color name="brown">#A52A2A</color>
+    <color name="veryLightBlue">#00FFFF</color>
+    <color name="darkBrown">#654321</color>
+    <color name="blue">#0000FF</color>
+    <color name="orange">#FF8000</color>
+    <color name="darkOrange">#FF5300</color>
+    <color name="paleYellow">#FDEAA8</color>
+    <color name="goldYellow">#FFD700</color>
+    <color name="azure">#007FFF</color>
+    <color name="lightGreen">#7FFF00</color>
+    <color name="turquoise">#30D5C8</color>
+    <color name="electrician">#2C75FF</color>
+    <color name="darkBlue">#000080</color>
+    <color name="yellowGreen">#ADFF2F</color>
+    <color name="lily">#CC99FE</color>
+    <color name="darkPurple">#800080</color>
 </resources>
