--- a/app/src/main/res/layout/files.xml
+++ b/app/src/main/res/layout/files.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="50dp">
 
@@ -22,7 +21,7 @@
         android:layout_height="0dp"
         android:layout_toRightOf="@+id/fileOrDirectory"
         android:text="TextView"
-        android:textColor="#FF5722"
+        android:textColor="#000000"
         app:layout_constraintBottom_toTopOf="@+id/nums"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/fileOrDirectory"
@@ -32,7 +31,7 @@
         android:id="@+id/nums"
         android:layout_width="0dp"
         android:layout_height="15dp"
-        android:textColor="#FF5722"
+        android:textColor="#000000"
         android:textSize="8sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
