Beta 0.24 Added swipe menu.

--- a/app/src/main/res/layout/music.xml
+++ b/app/src/main/res/layout/music.xml
@@ -15,7 +15,7 @@
         android:clickable="true"
         app:layout_constraintBottom_toBottomOf="@+id/MusicListView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@mipmap/rockbee_foreground" />
+        app:srcCompat="@drawable/ic_media_play" />
 
     <ListView
         android:id="@+id/MusicListView"
