--- a/app/src/main/res/layout/files.xml
+++ b/app/src/main/res/layout/files.xml
@@ -22,6 +22,7 @@
         android:layout_toRightOf="@+id/fileOrDirectory"
         android:text="TextView"
         android:textColor="#000000"
+        android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/nums"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/fileOrDirectory"
