--- a/app/src/main/res/layout/music.xml
+++ b/app/src/main/res/layout/music.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    >
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab3"
@@ -13,6 +14,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         android:clickable="true"
+        app:backgroundTint="#646464"
         app:layout_constraintBottom_toBottomOf="@+id/MusicListView"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/ic_media_play" />
