--- a/app/src/main/res/layout/files.xml
+++ b/app/src/main/res/layout/files.xml
@@ -20,6 +20,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_toRightOf="@+id/fileOrDirectory"
+        android:autoSizeTextType="none"
         android:text="TextView"
         android:textColor="#000000"
         android:textSize="16sp"
