--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,5 +10,6 @@
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
     <style name="MineCustomTabText" parent="TextAppearance.Design.Tab">
         <item name="android:textSize">8sp</item>
+        <item name="autoSizeTextType">uniform</item>
     </style>
 </resources>
